chore: migrate to Eclipse Temurin, because they provide JRE images