@@ -45,6 +45,7 @@
         <junit.version>6.0.0</junit.version>
         <mockito.version>5.20.0</mockito.version>
         <kotlin.version>1.9.10</kotlin.version>
+        <argLine>--add-modules jdk.incubator.vector</argLine>
     </properties>
 
     <licenses>
@@ -310,6 +311,18 @@
                 <version>3.9.0</version>
                 <executions>
                     <execution>
+                        <id>load-properties</id>
+                        <goals>
+                            <goal>properties</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>properties</id>
+                        <goals>
+                            <goal>properties</goal>
+                        </goals>
+                    </execution>
+                    <execution>
                         <id>analyze</id>
                         <goals>
                             <goal>analyze-only</goal>
@@ -345,7 +358,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>libraries/</classpathPrefix>
-                            <mainClass>de.corelogics.mediaview.Main</mainClass>
+                            <mainClass>Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -354,6 +367,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.4</version>
+                <configuration>
+                    <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -388,7 +404,6 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
